Fix for mobile safari not showing video controls when top window

--- a/rockpack/mainsite/static/assets/wonderplayer/partials/_global.less
+++ b/rockpack/mainsite/static/assets/wonderplayer/partials/_global.less
@@ -27,7 +27,7 @@ body, html {
 	-moz-osx-font-smoothing: grayscale;
 
 	&.embedded {
-		position: fixed;
+		// position: fixed;
 	}
 }
 
